Initial cover support

--- a/custom_components/openhab/translations/en.json
+++ b/custom_components/openhab/translations/en.json
@@ -23,6 +23,7 @@
             "user": {
                 "data": {
                     "binary_sensor": "Binary sensor enabled",
+                    "cover": "Cover enabled",
                     "sensor": "Sensor enabled",
                     "switch": "Switch enabled"
                 }
