Initial light support (color on/off)

--- a/custom_components/openhab/translations/en.json
+++ b/custom_components/openhab/translations/en.json
@@ -24,6 +24,7 @@
                 "data": {
                     "binary_sensor": "Binary sensor enabled",
                     "cover": "Cover enabled",
+                    "device_tracker": "Device Tracker enabled",
                     "sensor": "Sensor enabled",
                     "switch": "Switch enabled"
                 }
